--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "react-toggle-dark-mode": "^1.1.1"
+    "react-toggle": "^4.1.3",
+    "react-toggle-dark-mode": "^1.1.1",
+    "sass": "^1.80.6"
   },
   "devDependencies": {
     "@types/node": "^20",
