--- a/package.json
+++ b/package.json
@@ -3,22 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "next": "15.0.2",
-    "next-themes": "^0.3.0",
-    "prettier": "^3.3.3",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "react-toggle": "^4.1.3",
-    "react-toggle-dark-mode": "^1.1.1",
-    "sass": "^1.80.6"
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "next": "14.1.0",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
